--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -116,14 +116,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Income" />
+                android:text="Income"
+                android:textColor="@color/black" />
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/incomeLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="0.0" />
+                android:text="0.0"
+                android:textColor="@color/bank_color"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <LinearLayout
@@ -137,14 +140,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Expense" />
+                android:text="Expense"
+                android:textColor="@color/black" />
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/expenseLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="0.0" />
+                android:text="0.0"
+                android:textColor="@color/red" />
         </LinearLayout>
 
         <LinearLayout
@@ -158,14 +163,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Total" />
+                android:text="Total"
+                android:textColor="@color/black" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/totalLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="0.0" />
+                android:text="0.0"
+                android:textColor="@color/black" />
         </LinearLayout>
     </LinearLayout>
 
