--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,7 +33,8 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/edit_text_background"
         android:hint="Username"
-        android:inputType="text" />
+        android:inputType="text"
+        android:textColor="@color/black" />
 
     <EditText
         android:id="@+id/editTextPassword"
@@ -43,7 +44,8 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/edit_text_background"
         android:hint="Password"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:textColor="@color/black" />
 
     <Button
         android:id="@+id/loginButton"
