--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -33,7 +33,8 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/edit_text_background"
         android:hint="Full Name"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:textColor="@color/black" />
 
     <EditText
         android:id="@+id/editTextEmail"
@@ -43,7 +44,8 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/edit_text_background"
         android:hint="Email Address"
-        android:inputType="textEmailAddress" />
+        android:inputType="textEmailAddress"
+        android:textColor="@color/black" />
 
     <EditText
         android:id="@+id/editTextUsername"
@@ -53,7 +55,8 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/edit_text_background"
         android:hint="Username"
-        android:inputType="text" />
+        android:inputType="text"
+        android:textColor="@color/black" />
 
     <EditText
         android:id="@+id/editTextPassword"
@@ -63,7 +66,8 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/edit_text_background"
         android:hint="Password"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:textColor="@color/black" />
 
     <Button
         android:id="@+id/buttonRegister"
